removing old handling of user access control (was part of schema)
