# etc/data/sandwiches-create-schema.js
@@ -15,11 +15,6 @@ describe('Schema', function() {
 
 	var salesSchema = {
 		name : 'sandwiches',
-		users : [ 
-			{ "name": "anon@donkeylift.com", "role": "reader" } 
-			, { "name": "demo@donkeylift.com", "role": "owner" }
-			, { "name": "admin@donkeylift.com", "role": "owner" }
-		],
 		tables: [
 			 { "name": "customers"
 			 , "row_alias": ["name"]
